--- a/theme/template-revealjs.html.template
+++ b/theme/template-revealjs.html.template
@@ -324,7 +324,7 @@ $if(display)$
 $endif$
 $if(mathjax)$
        math: {
-                // mathjax: 'https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.3/MathJax.js',
+                mathjax: 'https://cdn.jsdelivr.net/gh/mathjax/mathjax@2.7.8/MathJax.js',
                 config: 'TeX-AMS_HTML-full',
                 TeX: {
                         Macros: {
